front/src/app/app.component.scss
h1 {
  font-size: 24px;
  font-weight: 400;
  line-height: 29.05px;
  margin: 0;
}

h2 {
  font-size: 24px;
  font-weight: 600;
  line-height: 29.05px;
  margin-bottom: 0;
}

a {
  font-size: 20px;
  font-weight: 400;
  line-height: 24.2px;
  margin: 0;
}

p {
  font-size: 14px;
  font-weight: 400;
  line-height: 16.94px;
  margin: 0;
}

textarea {
  resize: none;
}

.custom-input {
  border: 1px solid black;
  border-radius: 0.375rem;
  padding: 0.5rem;
}

.custom-form-input {
  border: 1.5px solid #7763C5;
  border-radius: 0.375rem;
  padding: 0.5rem;
  width: 100%;
}

.primary-btn {
  color: white;
  font-weight: 500;
  background-color: #7763C5;
  padding: 0.7em 1.5em;
  border-radius: 0.7em;
  transition: background-color 0.3s ease, transform 0.3s ease; 

  &:hover {
    background-color: #917de0;
    transform: scale(1.05);
  }

  &:active {
    transform: scale(0.95);
  }
}

.mat-icon {
  height: auto;
  width: auto;
}

.custom-scrollbar {
  height: 250px;
  overflow-y: scroll;
  scrollbar-color: #007;
}

